--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>John Garcia - Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/script_course_filter.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -39,7 +43,7 @@
             <section class="card">
                 <h2>Merida, Venezuela</h2>
                 <img src="images/mountains.jpg" alt="Merida Mountains" class="responsive-img">
-                <p style="text-align: center;">Merida Mountains</p>
+                <p>Merida Mountains</p>
             </section>
         </div>
 
