--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio page of John Garcia showcasing coursework, certifications, and more.">
     <meta name="author" content="John Garcia">
-    <title>John Garcia - Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/script_course_filter.js"></script>
 
@@ -15,8 +15,8 @@
 </head>
 <body>
     <header>
-        <img src="images/profile.jfif" alt="Profile Picture">
         <h1>John Garcia</h1>
+        <img src="images/profile.jfif" alt="Profile Picture">
     </header>
 
     <nav>
