--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio page of John Garcia showcasing coursework, certifications, and more.">
     <meta name="author" content="John Garcia">
-    <title>Portfolio</title>
+    <title>John Garcia - Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/script_course_filter.js"></script>
 
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1>John Garcia</h1>
+        <h2>John Garcia</h2>
         <img src="images/profile.jfif" alt="Profile Picture">
     </header>
 
@@ -30,6 +30,7 @@
     </nav>
 
     <main >
+        <h1>Home</h1>
         <div class="container">
             <section class="card">
                 <h2>Course Work</h2>
