--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <section class="card">
             <h2>Web and Computer Programming Certificate</h2>
-            <div>
+            <div class="filter-buttons">
                 <button data-filter="all">All</button>
                 <button data-filter="CSE">CSE</button>
                 <button data-filter="WDD">WDD</button>
