--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,15 +9,14 @@
   <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   <meta property="og:title" content="Chamber of Commerce Directory">
   <meta property="og:description" content="Explore our member businesses and connect with the local community in Mérida, Venezuela.">
-  <meta property="og:image" content="https://yourdomain.com/images/social-preview.jpg">
-  <meta property="og:url" content="https://yourdomain.com/directory.html">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:image" content="https://https://jagg26.github.io/wdd231/chamber/images/merida.jpg">
+  <meta property="og:url" content="https://https://jagg26.github.io/wdd231/chamber
   <link rel="stylesheet" href="styles/normalize.css" />
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
   <header>
-    <h1>Merida Chamber of Commerce</h1>
+    <h2>Merida Chamber of Commerce</h2>
     <nav>
       <span class="menu-toggle">&#9776;</span>
       <ul>
@@ -30,7 +29,7 @@
   </header>
 
   <main>
-    <h2>Member Directory</h2>
+    <h1>Member Directory</h1>
     <div class="view-buttons">
       <button id="gridView">Grid View</button>
       <button id="listView">List View</button>
