Week 02 Directory Chamber

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Chamber of Commerce Directory">
   <meta property="og:description" content="Explore our member businesses and connect with the local community in Mérida, Venezuela.">
   <meta property="og:image" content="https://https://jagg26.github.io/wdd231/chamber/images/merida.jpg">
-  <meta property="og:url" content="https://https://jagg26.github.io/wdd231/chamber
+  <meta property="og:url" content="https://https://jagg26.github.io/wdd231/chamber>
   <link rel="stylesheet" href="styles/normalize.css" />
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
