--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,13 +6,16 @@
   <title>Chamber Directory | John Garcia</title>
   <meta name="description" content="Directory page of the Chamber of Commerce website showcasing member businesses." />
   <meta name="author" content="John Garcia" />
+  
   <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="styles/normalize.css" />
-  <link rel="stylesheet" href="styles/styles.css" />
+
   <meta property="og:title" content="Chamber of Commerce Directory">
   <meta property="og:description" content="Explore our member businesses and connect with the local community in Mérida, Venezuela.">
   <meta property="og:image" content="https://https://jagg26.github.io/wdd231/chamber/images/merida.jpg">
   <meta property="og:url" content="https://https://jagg26.github.io/wdd231/chamber>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
   <header>
@@ -42,7 +45,6 @@
     <p id="lastModified"></p>
   </footer>
 
-  <!-- JS -->
   <script src="scripts/script.js" defer></script>
 </body>
 </html>
