--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,8 +43,25 @@
   </main>
 
   <footer>
-    <p>&copy; <span id="currentyear"></span> John Garcia - WDD 231</p>
-    <p id="lastModified"></p>
+    <div class="footer-container">
+      <div class="footer-left">
+        <p><strong>Merida Chamber of Commerce</strong><br>
+        Av. Las Americas, Mérida 5101<br>
+        merida@comercio.org<br>
+        (223) 555-2300</p>
+      </div>
+      <div class="footer-center">
+        <img src="./images/instagram.svg" alt="Instagram">
+        <img src="./images/twitter.svg" alt="Twitter">
+        <img src="./images/linkedin.svg" alt="LinkedIn">
+      </div>
+      <div class="footer-right">
+        <p>WDD231 Class Project<br>
+        John Garcia<br>
+        &copy; <span id="currentyear"></span> Merida Chamber of Commerce<br>
+        <span id="lastModified"></span></p>
+      </div>
+    </div>
   </footer>
 
   <script src="scripts/script.js" defer></script>
