Week 03 Home Chamber Page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home | Merida Chamber of Commerce</title>
-  <meta name="description" content="Homepage of the Chamber of Commerce in Mérida, Venezuela.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chamber Directory | John Garcia</title>
+  <meta name="description" content="Home page of the Chamber of Commerce website showcasing member businesses." />
+  <meta name="author" content="John Garcia" />
+
   <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="./styles/styles.css" />
+
+  <meta property="og:title" content="Chamber of Commerce Directory">
+  <meta property="og:description" content="Explore our member businesses and connect with the local community in Mérida, Venezuela.">
+  <meta property="og:image" content="https://https://jagg26.github.io/wdd231/chamber/images/merida.jpg">
+  <meta property="og:url" content="https://https://jagg26.github.io/wdd231/chamber">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-oHDEc8Xed9d1U7kYH9ZQMEc2T5sXHQUjZz0Lgo6FtxZLfT1zUg9A29qTf5wftB0FbsQZ+ZRmFj1Z1J2nPb+zUg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
   <header>
