--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -27,8 +27,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="directory.html" class="active">Directory</a></li>
+        <li><a href="join.html">Join</a></li>
         <li><a href="#">Events</a></li>
-        <li><a href="#">Join</a></li>
       </ul>
     </nav>
   </header>
